 263.	[func]		New logging channel type 'stderr'

				channel some-name {
					stderr;
					severity error;
				}

 262.	[bug]		'master' was not initalised in zone.c:stub_callback().

 261.	[func]		Add dns_zone_markdirty().

 260.	[bug]		Running named as a non-root user failed on Linux
			kernels new enough to support retaining capabilities
			after setuid().

 259.	[func]		New random-device and random-seed-file statements
			for global options block of named.conf. Both accept
			a single string argument.

 258.	[bug]		Fixed printing of lwres_addr_t.address field.

 257.	[bug]		The server detached the last zone manager reference
			too early, while it could still be in use by queries.
			This manifested itself as assertion failures during the 
			shutdown process for busy name servers (RT #133).

 256.	[func]		isc_ratelimiter_t now has attach/detach semantics, and
			isc_ratelimiter_shutdown guarantees that the rate
			limiter is detached from its task.

 255.	[func]		New function dns_zonemgr_attach().

 254.	[bug]		suppress "query denied" messages on additional data
			lookups.

	--- 9.0.0b4 released ---

 253.	[func]		resolv.conf parser now recognises ';' and '#' as
			comments (anywhere in line, not just as the beginning).

 252.	[bug]		resolv.conf parser mishandled masks on sortlists.
			It slso aborted when an unrecognised keyword was seen,
			now it silently ignores the entire line.

 251.	[bug]		lwresd caught an assertion failure on startup.

 250.	[bug]		fixed handling of size+unit when value would be too
			large for internal representation.

 249.	[cleanup]	max-cache-size config option now takes a size-spec
			like 'datasize', except 'default' is not allowed.

 248.	[bug]		global lame-ttl option was not being printed when
			config structures were written out.

 247.	[cleanup]	Rename cache-size config option to max-cache-size.

 246.	[func]		Rename global option cachesize to cache-size and
			add corresponding option to view statement.
