@@ -1036,6 +1036,7 @@ resquery_connected(isc_task_t *task, isc_event_t *event) {
 			attrs = 0;
 			attrs |= DNS_DISPATCHATTR_TCP;
 			attrs |= DNS_DISPATCHATTR_PRIVATE;
+			attrs |= DNS_DISPATCHATTR_CONNECTED;
 			if (isc_sockaddr_pf(&query->addrinfo->sockaddr) ==
 			    AF_INET)
 				attrs |= DNS_DISPATCHATTR_IPV4;
