@@ -1,3 +1,13 @@
+ 266.	[bug]		zone.c:save_nsrrset() node was not initalised.
+
+ 265.	[bug]		dns_request_create() not works for TCP.
+
+ 264.	[func]		Dispatch can not take TCP sockets in connecting
+			state.	Set DNS_DISPATCHATTR_CONNECTED when calling
+			dns_dispatch_createtcp() for connected TCP sockets
+			or call dns_dispatch_starttcp() when the socket is
+			connected.
+
  263.	[func]		New logging channel type 'stderr'
 
 				channel some-name {
